--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,26 +5,28 @@ resources:
 - repo: self
 
 variables:
-    # Container registry service connection established during pipeline creation
-    dockerRegistryServiceConnection: '{{ containerRegistryConnection.Id }}'
-    imageRepository: 'javascriptdocker'
-    containerRegistry: 'sampleappcontainerregistry.azurecr.io'
-    dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
-    tag: '$(Build.BuildId)'
-
-    # Agent VM image name
-    vmImageName: 'ubuntu-latest'
+  dockerRegistryServiceConnection: 'CICDsampleregistry'  # Use the correct service connection name
+  imageRepository: 'javascriptdocker'
+  containerRegistry: 'sampleappcontainerregistry.azurecr.io'
+  dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
+  tag: '$(Build.BuildId)'
+  vmImageName: 'ubuntu-latest'
 
 stages:
 - stage: Build
-    displayName:Build and push stage
-    jobs:-job:Build
-    displayName:Build
-    pool:vmImage:$(vmImageName)
-    steps:- task:Docker@2
-        displayName:Build and push an image to container registry
-        inputs:command:buildAndPush
-        repository:$(imageRepository)
-        dockerfile:$(dockerfilePath)
-        containerRegistry:$(dockerRegistryServiceConnection)
-        tags:|$(tag)
+  displayName: Build and push stage
+  jobs:
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: $(vmImageName)
+    steps:
+    - task: Docker@2
+      displayName: Build and push an image to container registry
+      inputs:
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          $(tag)
